--- a/static/index.html
+++ b/static/index.html
@@ -5,21 +5,28 @@
 	<meta charset="utf-8">
 	<title>HCI Project Portfolio</title>
 </head>
-
+<body style="background-color:lightgreen;">
 <body>
 	<!-- this is a comment in HTML -->
 	<h1>Thinh D. Le</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
-	<h4>Project Portfolio</h4>
+	<a href="http://imgur.com/HgLAu8d" title="Thinh D. Le"><img src="http://i.imgur.com/HgLAu8d.jpg" title="Thinh Le" Width="200" Height= "200" alt="Thinh D. Le" style="float:right;" /></a>
+	<h4>Brief</h4>
 
 	<!-- p means paragraph -->
-	<p>Michael Bernstein is an assistant professor of Computer Science at Stanford University and director of the human-computer interaction group. He combines computation with crowds, designing systems that enable people to connect and coordinate online.</p>
+	<p>Thinh Le is a 3rd year student at the University of California San Diego, studying Cognitive Science with a specialization in Human-Computer Interaction. Also minoring in Psychology and Computer Science, he is interested in software and web development.</p>
 
-	<h4>Projects</h4>
-	<ol>
-		<li>Waiting in line</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
+	<h4>Project Portfolio</h4>
+	<lb>
+	<h4>Skills</h4>
+	
+		<li>Proficient with Programming Languages including but not limited to:</li>
+		<ol>
+		<li>Object Oriented Java</li>
+		<li>Python and vPython</li>
+		<li>HTML</li>
+		<li>Matlab</li>
 		<li>...</li>
-	</ol>
+	    </ol>
+
 </body>
 </html>
